[package]
name = "dryas"
authors = ["patrickett <patrickett@protonmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["env", "derive"] }
crossterm = "0.28.1"
hex = "0.4.3"
ratatui = "0.29.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_bencode = "0.2.4"
serde_json = "1.0.132"
sha1 = "0.10.6"
