[package]
name = "flud"
authors = ["patrickett <patrickett@protonmail.com>"]
version = "0.1.0"
edition = "2021"


[profile.release]
lto = "fat"

[dependencies]
torrent = { path = "./torrent" }
clap = { version = "4.5.20", features = ["env", "derive"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
strum = { version = "0.26", features = ["derive"] }
dirs = "5.0.1"
thiserror = "1.0.64"
