[package]
name = "torrent"
authors = ["patrickett <patrickett@protonmail.com>"]
version = "0.1.0"
edition = "2021"


[profile.release]
lto = "fat"

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_bencode = "0.2.4"
serde_json = "1.0.132"
serde_urlencoded = "0.7.1"
sha1_smol = { version = "1.0.1", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["blocking"] }
